Implemented Bootstrap for some web beauty

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -16,6 +16,11 @@
   font-family: Trebuchet MS, Helvetica, sans-serif;
 }
 
+#comments-section{
+  text-align:center;
+  font-family: Trebuchet MS, Helvetica, sans-serif;
+}
+
 #clickBttn {
   font-family: Comic Sans MS, cursive, sans-serif;
   text-align:center;
