--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -21,6 +21,10 @@
   text-align:center;
 }
 
+#comment-submit-form-group {
+  text-align:center;
+}
+
 #content {
   margin-left: auto;
   margin-right: auto;
