Added Comment Functionality for the Backend (#4)
* updated gitignore

* updated gitignore again

* Imported DataStore on POM file

* Added basic comment storage functionality

* Implemented Bootstrap for some web beauty

* Added LoadCommentServlet.java

* correct prev commit Renamed LoadCommentsServlet to UpvoteServlet

* Added Comment class to represent a comment object

* DataServlet comment implementation

* Revert "Implemented Bootstrap for some web beauty"

This reverts commit 4c568ac70770a39a61fee7f03e37945a0ef44f40.

* Removed blue background

* Changed due to PR code review

* Changed string properties to hardcoded constant values

* Deleted Eclipse Files

* Changed comment.java to have a single primary contructor

* Fixed compilation error

* File didn't save so changes were not pushed

* Fixed typo

* Removed .classpath

* Removed eclipse config files

* Added ability to delete comments from DataStore

* Connected comments to JS Script

* Removed extra HTML

* Changed naming of constant values to match Style Guide

* Changed more names to constants

* Removed getters and setters from Comments.java

* Made final values static

* Finished comment functionality

* Added moment.js to HTML for accurate time

* Removed un-used code

* Added Java Logging config to App Engine

* Changed logger info output to debug output

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -8,10 +8,20 @@
 
 #fact-container {
   text-align:center;
+  font-family: Trebuchet MS, Helvetica, sans-serif;
+}
+
+#greeting-container {
+  text-align:center;
+  font-family: Trebuchet MS, Helvetica, sans-serif;
 }
 
 #clickBttn {
   font-family: Comic Sans MS, cursive, sans-serif;
+  text-align:center;
+}
+
+#comment-submit-form-group {
   text-align:center;
 }
 
