--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -6,6 +6,12 @@
   text-align:center;
 }
 
+#map {
+  border: thin solid black;
+  height: 500px;
+  width: 500px;
+}
+
 #fact-container {
   text-align:center;
   font-family: Trebuchet MS, Helvetica, sans-serif;
