Changed overall portfolio layout

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -30,7 +30,13 @@
 #content {
   margin-left: auto;
   margin-right: auto;
-  width: 650px;
+  width: 950px;
+}
+
+#top-content {
+  margin-left: auto;
+  margin-right: auto;
+  width: 950px;
 }
 
 #myimage {
@@ -47,6 +53,20 @@
 
 #greeting-container {
   margin-top: 20px;
+}
+
+#map {
+  border: thin solid black;
+  height: 500px;
+  width: 100%;
+}
+
+#networks{
+  text-align:center;
+}
+
+#top-content{
+  text-align:center;
 }
 
 
