--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -6,18 +6,21 @@
   text-align:center;
 }
 
+.icons{
+  height: 20px;
+  width: 20px;
+}
+
 #fact-container {
   text-align:center;
-  font-family: Trebuchet MS, Helvetica, sans-serif;
 }
 
 #greeting-container {
   text-align:center;
-  font-family: Trebuchet MS, Helvetica, sans-serif;
+  margin-top: 20px;
 }
 
 #clickBttn {
-  font-family: Comic Sans MS, cursive, sans-serif;
   text-align:center;
 }
 
@@ -28,8 +31,13 @@
 #content {
   margin-left: auto;
   margin-right: auto;
-  width: 650px;
-  font-family: Trebuchet MS, Helvetica, sans-serif;
+  width: 950px;
+}
+
+#top-content {
+  margin-left: auto;
+  margin-right: auto;
+  width: 950px;
 }
 
 #myimage {
@@ -44,10 +52,33 @@
   margin-right: auto;
 }
 
-#greeting-container {
-  margin-top: 20px;
+#comments-sect {
+  width: 80%;
+  text-align:center;
+  margin-left: auto;
+  margin-right: auto;
 }
 
+#map {
+  border: thin solid black;
+  height: 500px;
+  width: 100%;
+}
+
+#networks{
+  text-align:center;
+}
+
+#top-content{
+  text-align:center;
+}
+
+body{margin-top:20px;}
+
+#comment-image{
+  height: 50px;
+  width: 50px;
+}    
 
 
 
