--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -6,6 +6,11 @@
   text-align:center;
 }
 
+#map {
+  border: thin solid black;
+  height: 500px;
+  width: 500px;
+
 .icons{
   height: 20px;
   width: 20px;
